Finished coding, need to test.